<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jooketechnologies.jooketest.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <EditText
        android:id="@+id/instagram_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram_link" />

    <EditText
        android:id="@+id/facebook_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_link" />

    <EditText
        android:id="@+id/twitter_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter_link" />

    <EditText
        android:id="@+id/profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_img" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <TextView
        android:id="@+id/success"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>